@@ -80,6 +80,7 @@ EYEDBODLCXX_FLAGS=
 noinst_DATA=$(TOPIC_SCRIPT_FILES)
 EDIT = sed \
 	-e 's,@EYEDB_BINDIR\@,$(EYEDB_BINDIR),g' \
+	-e 's,@EYEDB_SBINDIR\@,$(EYEDB_SBINDIR),g' \
 	-e 's,@EYEDB_LIBDIR\@,$(EYEDB_BINDIR),g' \
 	-e 's,@EYEDB_JAR\@,$(EYEDB_JAR),g' \
 	-e 's,@JAVA\@,$(JAVA),g' 
