@@ -1,5 +1,6 @@
 SUBDIRS=\
 bugs/array \
+bugs/bigdatabase \
 bugs/bigoql \
 bugs/quicktour \
 php \
